--- a/msc_data_normalization-main/package.json
+++ b/msc_data_normalization-main/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "langchain": "^0.3.19",
+    "langchain": "^0.3.22",
+    "openai": "^4.95.0",
     "sequelize": "^6.37.7",
     "tedious": "^18.6.1"
   }
